# JTC

./: .coverage  .env.example  .gitignore  ARCHITECT_CRITIC_REVIEW.md  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml  run_all_tests.py  spec_dump.txt  spec_wrapped.txt  test.parquet  test_env_monkey.py
.github/workflows/: ci.yml
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md  _USER_TEST_SCENARIO.md  __ALL_SPEC.md  required_envs.json  test_execution_log.txt
dev_documents/system_prompts/: ARCHITECT_CRITIC_INSTRUCTION.md  ARCHITECT_CRITIC_REVIEW.md  POST_AUDIT_REFACTOR_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md
src/: jquants_client.py  repository.py  transformers.py
src/analysis/: backtest.py  statistics.py
src/clients/: jquants_client.py
src/config/: settings.py
src/core/: __init__.py  config.py  exceptions.py
src/domain_models/: __init__.py  backtest.py  config.py  manifest.py  models.py  processed_quote.py  quote.py  quotes.py  raw_quote.py  schemas.py  statistics.py  transformed_quote.py
src/ingestion/: __init__.py  jquants_client.py
src/processing/: transformers.py
src/repository/: repository.py
src/storage/: __init__.py  parquet_duckdb.py  repository.py
src/transformation/: __init__.py  feature_engine.py
tests/: test_ingestion.py  test_integration.py  test_transformation.py
tests/e2e/: test_client.py  test_cycle01.py  test_cycle02_integration.py  test_ingestion_storage.py  test_integration.py  test_jquants_client.py  test_live.py  test_live_api.py  test_live_ingestion.py  test_live_pipeline.py  test_pipeline.py  (+1 more)
tutorials/: UAT_AND_TUTORIAL.py
(+22 files in other folders)
