[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "statsmodels>=0.14.6",
    "vectorbt>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE",
    "B", "A", "C4", "DTZ", "T10", "EM", "ICN", "PIE", "T20", "PT", "RET",
    "SIM", "TID", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"
]

ignore = [
    "ANN101", "ANN002", "ANN003", "ANN001", "ANN401", "ARG001", "ARG005",
    "PLR2004", "E501", "TRY003", "D", "ANN201", "N806", "PLC0415", "BLE001",
    "PT019", "RUF003", "ARG002", "RUF043", "RUF059", "PLR0913", "ANN202"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.mccabe]
max-complexity = 10  # Exceeding this prompts function splitting (prevent AI long functions)

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true  # Arguments starting with _ do not require type hints

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
